@@ -4,6 +4,7 @@
   - Added .gemspec and updated packaging process.
   - Removed explicit require for RubyGems, see README.
   - Fixed reports retrieval via curb HTTPI backend.
+  - Removed support for deprecated BulkOpportunityService.
 
 0.5.0:
   - Removed deprecated API versions (pre-v201109).
